# cmake-nasm-test

./: CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: run-tests.yml
src/asm/: helloworld.asm
test/: run-tests.sh
